fixed overflowing problems of relief section

--- a/assets/scss/base/_layout.scss
+++ b/assets/scss/base/_layout.scss
@@ -1,7 +1,3 @@
-body, html {
-
-//    height:100%;
-}
 
 body {
     
@@ -16,14 +12,7 @@ body {
 
 
 .parallax {
-    
-//    position: absolute;
-//width: 100%;
-//height: 100%;
-//overflow-x: hidden;
-//overflow-y: auto;
-//perspective: 300px;
-//scroll-behavior: smooth;
+
     
     position: absolute;
     height: 100vh;
@@ -44,19 +33,10 @@ body {
     
 }
 
-//.parallax__group:nth-child(2) {
-//    
-////    transform-style:flat;
-//    height: 300vh;
-//    transform: translate3d(0, 0, 0) rotateY(0);
-//    
-//}
+
 
 /******TEST****/
 //morepain
-
-
-
 
 .parallax__group:nth-child(3) {
     
@@ -64,16 +44,18 @@ body {
     
 }
 //relief
-.parallax__group:nth-child(4) {
-    
-//    z-index: -2;
-    height:110vh;
-    
-}
+//.parallax__group:nth-child(4) {
+//    
+//    
+//    height:130vh;
+//    
+//}
+
+
 
 .parallax__layer {
     
-//    padding: 100vh 0;
+
     z-index: -1;
     position: absolute;
     top: 0;
@@ -88,13 +70,13 @@ body {
     
     
     transform: translateZ(0) scale(1);
-    @include perspective-scale-factor(0px);
-   
-//    z-index: 0;
-    
+
+
     
     
 }
+
+
 .parallax__layer-back {
     
     
@@ -104,7 +86,6 @@ body {
     
     
 }
-
 
 
 
