--- a/assets/scss/modules/_hero.scss
+++ b/assets/scss/modules/_hero.scss
@@ -16,7 +16,14 @@
     
 
 
-ul {
+
+
+.hero {
+
+    font-size: 30px;
+    
+    
+    ul {
     
     list-style: none;
     padding: 1%; 
@@ -25,21 +32,18 @@ ul {
         
 }
 
-li {
-    
-    margin-left: 2%;
-    margin-right: 2%; 
-    display: inline-block;
-    vertical-align: middle;
-//    margin-top: 1%;
-    
-    
-    
-}
+    li {
 
-.hero {
+        margin-left: 2%;
+        margin-right: 2%; 
+        display: inline-block;
+        vertical-align: middle;
+    //    margin-top: 1%;
 
-    font-size: 30px;
+
+
+    }
+    
     
 
     h1, h4 {
@@ -112,31 +116,8 @@ li {
 
     
     }
-
     
-
-}
-
-.hero .row:nth-child(1) {
-    
-    margin-top: 2%;
-    
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-button {
+    button {
     
     padding: 0 15%;
     margin-top: 10%;
@@ -152,7 +133,19 @@ button {
     line-height: 28px;
     height: 3em;
     
+    }
+
+    
+
 }
+
+.hero .row:nth-child(1) {
+    
+    margin-top: 2%;
+    
+}
+
+
 
 .top-contacts {
     
@@ -237,46 +230,34 @@ button {
     
 
     .hero {
-            
-            text-align: center;
-            color: white; 
-            margin-left: auto; 
-            margin-right: auto; 
-            text-align: center;
-            font-size: 20px;
-        
+        text-align: center;
+        color: white;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+        font-size: 20px;
         
         .contact {
-
             display: none;
-
-
         }
         
         img {
-        
-        width: 105%;
-        height: 55%;
-        
-        
+            width: 105%;
+            height: 55%;
         }
         
         .logo {
-        
-        margin-bottom: 2%;
-        
+            margin-bottom: 2%;
         }
         
-        .top-contacts {display:inline;}
+        .top-contacts {
+            display: inline;
+        }
         
         button {
-        
-        font-size: 0.8em;
-        
+            font-size: 0.8em;
         }
-
         
-   
     }
     
     
@@ -300,26 +281,20 @@ button {
 }
 @media screen and  (min-width: 650px)  and (max-width: 767px){
  
-    
     .hero img {
-        
         width: 75%;
     }
-    
 }
 @media screen and  (min-width: 426px)  and (max-width: 767px){
     
     .hero .content {
-            
-            
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+        
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
         width: 75%;
-            
-            
-        }
+    }
     
         @media screen and  (max-height: 2000px) { 
             
@@ -335,43 +310,28 @@ button {
     
     
     .hero {
-    
         button {
-
             font-size: 0.6em;
             padding: 0;
             width: 100%;
             height: 100%;
-
         }
-    
-         .content {
-
-
+        .content {
             position: absolute;
             top: 55%;
             left: 50%;
             transform: translate(-50%, -50%);
             width: 75%;
-
         }
-        
     }
-    
     @media screen and  (max-height: 618px) {
         
-        .hero  {
-            
+    .hero {
             .content {
-                
-                
                 width: 50%;
                 font-size: 14px;
             }
-            
         }
-    
-
     }
     
 
@@ -381,16 +341,3 @@ button {
 }
 
 
-
-@media screen and (max-height: 412px) {
-    
-//        .parallax__group:nth-child(1) {
-//        
-//        color: red;
-//        height: 155vh;
-//        
-//    }
-    
-    
-    
-}
